--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,4 +1,13 @@
 {
   "singleQuote": false,
-  "trailingComma": "all"
+  "trailingComma": "all",
+
+  "overrides": [
+    {
+      "files": ["*.html"],
+      "options": {
+        "printWidth": 1000
+      }
+    }
+  ]
 }
